<resources>
    <string name="app_name">RoomSystem</string>
    <string name="Login">Login:</string>
    <string name="email">Email ? :</string>
    <string name="password">Password ? :</string>
    <string name="connect">CONNECT</string>
    <string name="create">CREATE</string>
    <string name="search_title">search</string>
    <string name="dht11">DHT11</string>
    <string name="title_activity_configuration">ConfigurationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="requirement">Requirement:</string>
    <string name="steps">Steps:</string>
    <string name="configuration_list">Configuration selection:</string>
    <string name="bt_terminal">Terminal BT:</string>
    <string name="send">SEND</string>
    <string name="answer_here">Answer here...</string>
    <string name="connection_error">Connection error...</string>
</resources>